Multiple concepts covered

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Heather Scimitars - JavaScript</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heather Scimitars - JavaScript</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-  <form>
+  <body>
+    <!-- <form>
     <input type="text" placeholder="Enter your birth year">
     <button type="submit">Submit</button>
-  </form>
+  </form> -->
 
-  <script src="script.js"></script>
-</body>
-
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="exercise.js"></script> -->
+    <script src="arrays.js"></script>
+  </body>
 </html>
