--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- <script src="script.js"></script> -->
     <!-- <script src="exercise.js"></script> -->
-    <script src="arrays.js"></script>
+    <!-- <script src="arrays.js"></script> -->
+    <script src="strings.js"></script>
   </body>
 </html>
